kubernetes/books.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books
  template:
    metadata:
      name: books
      labels:
        app: books
    spec:
      containers:
       - image: alexandrosnti/books
         name: books
         ports:
          - containerPort: 3010
            protocol: TCP
         resources:
            requests:
              memory: "64Mi"
              cpu: "150m"
            limits:
              memory: "128Mi"
              cpu: "200m"
         livenessProbe:
            httpGet:
              path: /health
              port: 3010
            initialDelaySeconds: 60
            periodSeconds: 20
         readinessProbe: 
            httpGet:
                path: /health
                port: 3010
            initialDelaySeconds: 60
            periodSeconds: 20
