kubernetes/search.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
  labels:
    app: search
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search
  template:
      metadata:
        name: search
        labels:
          app: search
      spec:
        containers:
        - image: alexandrosnti/search
          name: search
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
              requests:
                memory: "64Mi"
                cpu: "250m"
              limits:
                memory: "128Mi"
                cpu: "500m"
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 20
          readinessProbe: 
            httpGet:
                path: /health
                port: 3000
            initialDelaySeconds: 60
            periodSeconds: 20
