kubernetes/videos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: videos
  labels:
    app: videos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: videos
  template:
    metadata:
      labels:
        name: videos
        app: videos
    spec:
      containers:
       - image: alexandrosnti/videos
         name: videos
         ports:
          - containerPort: 3000
            protocol: TCP
         resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
         livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 20
         readinessProbe: 
            httpGet:
                path: /health
                port: 3000
            initialDelaySeconds: 60
            periodSeconds: 20
