kubernetes/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      name: web
      labels:
        app: web
    spec:
      containers:
       - image: alexandrosnti/web
         name: web
         ports:
          - containerPort: 3000
            protocol: TCP
         resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
         livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 20
         readinessProbe: 
            httpGet:
                path: /health
                port: 3000
            initialDelaySeconds: 60
            periodSeconds: 20
