kubernetes/books-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3010
  selector:
    app: books
