kubernetes/mongo-service-inner.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro-loadbalancer
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: mongo
