kubernetes/search-sevice.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: search
