kubernetes/videos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: videos-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: videos
