kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: beat
  # annotations:
  #   kubernetes.io/ingress.class: "nginx"
  #   nginx.com/health-checks: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: web-nodeport
          servicePort: 80
      - path: /search
        backend:
          serviceName: search-nodeport
          servicePort: 80
      - path: /search/*
        backend:
          serviceName: search-nodeport
          servicePort: 80
      - path: /videos
        backend:
          serviceName: videos-nodeport
          servicePort: 80
      - path: /videos/*
        backend:
          serviceName: videos-nodeport
          servicePort: 80
      - path: /books
        backend:
          serviceName: books-nodeport
          servicePort: 80
      - path: /books/*
        backend:
          serviceName: books-nodeport
          servicePort: 80
